My_server/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: carptms
  labels:
    name: carptms
