My_server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carptms-server
  namespace: carptms
  labels:
    app: carptms-server
spec:
  selector:
    app: carptms-server
  ports:
  - name: http
    port: 80
    targetPort: 8082
  type: ClusterIP
