My_server/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carptms-server
  namespace: carptms
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: carptms.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carptms-server
            port:
              number: 80
